--- a/src/components/listing/listing.css
+++ b/src/components/listing/listing.css
@@ -6,13 +6,13 @@
 .listing-item {
     display: none;
     position: absolute;
+    right: 0px;
     z-index: 20;
 
-    right: 0px;
     width: max-content;
-    max-height: 90px;
+    /* max-height: 90px; */
     overflow: auto;
-    min-width: 55px;
+    min-width: 155px;
 
     box-shadow: var(--box-shadow-light);
     border-radius: var(--border-radius);
@@ -24,7 +24,7 @@
     text-align: left;
     text-transform: capitalize;
     margin-top: 2px;
-    padding: 5px 1px 5px 5px;
+    /* padding: 5px 1px 5px 5px; */
 
 }
 .footer-item {
@@ -59,8 +59,17 @@
 
 
 
+.listing .item {
+
+    cursor: pointer;
+    padding: 3px 5px;
+ 
+    /* box-shadow: 0 0px 1px hsl(0deg 0% 0% / 20%), 0 1px 2px hsl(0deg 0% 0% / 20%); */
+}
 .listing .item:hover {
-    background-color: var(--second-bg);
+    background-color: var(--nuance);
     color: var(--main-color);
-    box-shadow: 0 0px 1px hsl(0deg 0% 0% / 20%), 0 1px 2px hsl(0deg 0% 0% / 20%);
+    cursor: pointer;
+ 
+    /* box-shadow: 0 0px 1px hsl(0deg 0% 0% / 20%), 0 1px 2px hsl(0deg 0% 0% / 20%); */
 }
